fix(bug): social alignment

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1212,13 +1212,20 @@ footer {
 .social {
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-direction: row; }
+  @media (min-width: 768px) and (max-width: 991px) {
+    .social {
+      justify-content: flex-start; } }
+  @media (min-width: 992px) {
+    .social {
+      justify-content: flex-start; } }
   .social a {
     display: inline-block; }
   .social a img {
     display: block;
     width: 8.773vw;
-    margin: 5.333vw 2.1335vw 0; }
+    margin: 5.333vw 2.1335vw; }
     @media (min-width: 768px) and (max-width: 991px) {
       .social a img {
         width: 4.284vw;
