--- a/src/scss/partials/social.scss
+++ b/src/scss/partials/social.scss
@@ -1,7 +1,16 @@
 .social {
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-direction: row;
+
+    @include tablet {
+        justify-content: flex-start;
+    }
+
+    @include desktop {
+        justify-content: flex-start;
+    }
 
     a {
         display:inline-block;
@@ -9,7 +18,7 @@
     a img {
         display:block;
         width: 8.773vw;
-        margin: 5.333vw 2.1335vw 0;
+        margin: 5.333vw 2.1335vw;
 
         @include tablet {
             width: 4.284vw;
